--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickconsole",
+  "name": "quick-console",
   "version": "1.0.0",
   "description": "The QuickConsole is a lightweight and easy-to-use logging utility for Node.js applications. This minimalist logging package empowers developers to add color and style to their console output effortlessly. With a focus on simplicity and flexibility, this logger allows you to customize text color, background color, and other styling options, enhancing the readability of your logs.",
   "main": "index.js",
@@ -13,12 +13,8 @@
   "keywords": [
     "logger",
     "console",
-    "color",
-    "styling",
-    "node",
-    "npm",
-    "logging",
-    "debugging"
+    "style",
+    "npm"
   ],
   "author": "Dinesh Basnet",
   "license": "ISC",
