--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "quick-console",
+  "name": "simple-logr",
   "version": "1.0.0",
-  "description": "The QuickConsole is a lightweight and easy-to-use logging utility for Node.js applications. This minimalist logging package empowers developers to add color and style to their console output effortlessly. With a focus on simplicity and flexibility, this logger allows you to customize text color, background color, and other styling options, enhancing the readability of your logs.",
-  "main": "index.js",
+  "description": "The SimpleLogr is a lightweight and easy-to-use logging utility for Node.js applications. This minimalist logging package empowers developers to add color and style to their console output effortlessly. With a focus on simplicity and flexibility, this logger allows you to customize text color, background color, and other styling options, enhancing the readability of your logs.",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamdineshbasnet/quick-console.git"
+    "url": "git+https://github.com/iamdineshbasnet/simple-logr.git"
   },
   "keywords": [
     "logger",
     "console",
     "style",
-    "npm"
+    "color"
   ],
   "author": "Dinesh Basnet",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iamdineshbasnet/quick-console/issues"
+    "url": "https://github.com/iamdineshbasnet/simple-logr/issues"
   },
-  "homepage": "https://github.com/iamdineshbasnet/quick-console#readme"
+  "homepage": "https://github.com/iamdineshbasnet/simple-logr#readme"
 }
